<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yeeeeeellllllooowwww"
    tools:context=".Quiz.NumbersUnitQuiz.NumbersUnitsFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="380dp"
        android:layout_height="428dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/greenboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/e"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/option1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/ae2"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/option2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/e2"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <TextView
        android:id="@+id/option3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/oe2"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/option4"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/o2"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option3" />

</androidx.constraintlayout.widget.ConstraintLayout>