<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bglogin"
        tools:context=".Basic.UnitsFragment">

        <TextView
            android:id="@+id/Units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/units"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bgbg"
            app:layout_constraintBottom_toTopOf="@+id/piece"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/individual"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/drawer_border"
                android:gravity="center"
                android:text="@string/individual"
                android:textSize="34sp"
                app:layout_constraintEnd_toStartOf="@+id/respectform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/respectform"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/drawer_border"
                android:gravity="center"
                android:text="@string/respectform"
                android:textSize="34sp"
                app:layout_constraintEnd_toStartOf="@+id/person"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/person"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="@string/person"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/example"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="@string/example"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person" />

            <TextView
                android:id="@+id/individual2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/individual2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/respectform2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/individual" />

            <TextView
                android:id="@+id/respectform2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:text="@string/respectform2"
                app:layout_constraintEnd_toStartOf="@+id/example"
                app:layout_constraintTop_toBottomOf="@+id/respectform" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout5"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bgbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout4">

            <TextView
                android:id="@+id/piece"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/drawer_border"
                android:gravity="center"
                android:text="@string/piece"
                android:textSize="34sp"
                app:layout_constraintEnd_toStartOf="@+id/fruits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fruits"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="@string/fruit"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/example2"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fruits" />

            <TextView
                android:id="@+id/piece2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="51dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/piece22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/example2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/piece" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout6"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bgbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

            <TextView
                android:id="@+id/mari"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/drawer_border"
                android:gravity="center"
                android:text="@string/animals"
                android:textSize="34sp"
                app:layout_constraintEnd_toStartOf="@+id/animals"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/animals"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="@string/animal"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/example3"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/header_bkg"
                android:gravity="center"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animals" />

            <TextView
                android:id="@+id/animals2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="51dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/animals2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/example2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/piece"
                tools:ignore="NotSibling" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>