<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context=".Quiz.QuizFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout5"
        android:layout_width="335dp"
        android:layout_height="418dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="127dp"
        android:background="#9AFFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hangeul"
            android:layout_width="248dp"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_border"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/hangeul"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numUnit"
            android:layout_width="248dp"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_border"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/numbers_unit"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hangeul" />

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="248dp"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/border_border"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/date_time"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numUnit" />

        <TextView
            android:id="@+id/locDirection"
            android:layout_width="248dp"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/border_border"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/locationDirection"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTime" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtQuizTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/quiz_time"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>